// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routes > Users > Password POST /api/v1/users/password returns an invalid parameter response for invalid reset tokens 1`] = `
{
  "code": "InvalidRequest",
  "errors": [
    {
      "error": "invalid",
      "key": [
        "token",
      ],
      "source": "body",
    },
  ],
  "message": "Invalid password reset token",
  "status": 400,
}
`;

exports[`Routes > Users > Password POST /api/v1/users/password returns an invalid parameter response for unauthorized clients 1`] = `
{
  "code": "InvalidRequest",
  "errors": [
    {
      "error": "invalid",
      "key": [
        "clientId",
      ],
      "source": "body",
    },
  ],
  "message": "Client not authorized for password resets",
  "status": 400,
}
`;

exports[`Routes > Users > Password POST /api/v1/users/password/token returns an invalid parameter response for unauthorized clients 1`] = `
{
  "code": "InvalidRequest",
  "errors": [
    {
      "error": "invalid",
      "key": [
        "clientId",
      ],
      "source": "body",
    },
  ],
  "message": "Client not authorized for password resets",
  "status": 400,
}
`;
